# C-CPP_exercises

./: .gitignore  LICENSE.md  README.md
BTK/: Readme.md
BTK/AbstractSample/: CMakeLists.txt  main.cpp  run.sh
BTK/Arrays/: CMakeLists.txt  main.cpp  run.sh
BTK/ConstantSample/: CMakeLists.txt  main.cpp  run.sh
BTK/Loops1/: CMakeLists.txt  main.cpp  run.sh
BTK/Loops2/: CMakeLists.txt  main.cpp  run.sh
BTK/OOP/: CMakeLists.txt  main.cpp  run.sh
BTK/OOP2/: CMakeLists.txt  main.cpp  run.sh
BTK/OOP3_Inheritance/: CMakeLists.txt  main.cpp  run.sh
BTK/Reference/: CMakeLists.txt  main.cpp  run.sh
BTK/StaticSample/: CMakeLists.txt  main.cpp  run.sh
C++_Exercises/: ascii_to_binary.cpp
C++_Exercises/BFS_DFS/: CMakeLists.txt  main.cpp  matrix.txt  matrix2.txt
C++_Exercises/BFS_DFS/libs/: CMakeLists.txt
C++_Exercises/BFS_DFS/libs/bfs/: bfs.cpp  bfs.h
C++_Exercises/BFS_DFS/libs/dfs/: dfs.cpp  dfs.h
C++_Exercises/BFS_DFS/libs/file_operations/: read_nodes.cpp  read_nodes.h
C++_Exercises/BFS_DFS/libs/nodes/: node.cpp  node.h
C++_Exercises/Class/: CMakeLists.txt  animal.h  cat.h  main.cpp
C++_Exercises/CppVersion/: CMakeLists.txt  main.cpp
C++_Exercises/HeaderFileExample/: CMakeLists.txt  computate.cpp  computate.hpp  headerExample.cpp
C++_Exercises/TernaryTest/: Makefile  Readme.md  filetest.cpp  output.txt  test.c
C++_Exercises/ascii_to_binary/: CMakeLists.txt  ascii_to_binary.cpp  operations.h
C_Exercises/Binary_Search_Tree/: BST.cpp  CMakeLists.txt  tree.h
C_Exercises/Execv_Sample/: Readme.md  main.c  program2.c
(+8 files in other folders)
